# change_github_repos_naming

./: Cargo.toml  README.md
src/: main.rs
